fix spacing on blue toad page

--- a/wp-content/themes/make-co/scss/bp-profiles.scss
+++ b/wp-content/themes/make-co/scss/bp-profiles.scss
@@ -5,6 +5,9 @@
 			position: absolute;
 			bottom: 10px;
 			right: 10px;
+			@media (max-width: 767px) {
+				display: none;
+			}
 			.btn {
 				height: 30px;
 				margin-left: 15px;
