--- a/wp-content/themes/make-co/scss/pages.scss
+++ b/wp-content/themes/make-co/scss/pages.scss
@@ -4,9 +4,6 @@
 	#page-content.bluetoad {
 		padding-top: 0px;
 		margin-bottom: 40px;
-		@media screen and (max-width: 768px) {
-		  	padding-top: 50px;
-		}
 		iframe {
 			width: 100%;
 			height: 100vh;
